add reset and html structure

--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Drowpdown Header + Carrousel under</title>
   </head>
   <body>
-    <h1>basic webpack config template to keep</h1>
+
+    <div class="header">
+      <a href="">Home</a>
+      <a href="">History</a>
+      <a href=""></a>
+      <button class="dropBtn"><img src="" alt="">See More</button>
+    </div>
   </body>
 </html>
