--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,10 @@
       <a href="">Home</a>
       <a href="">History</a>
       <a href=""></a>
-      <button class="dropBtn"><img src="" alt="">See More</button>
+      <button class="dropBtn"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5" />
+      </svg>
+      See More</button>
     </div>
   </body>
 </html>
