--- a/src/template.html
+++ b/src/template.html
@@ -6,15 +6,30 @@
     <title>Drowpdown Header + Carrousel under</title>
   </head>
   <body>
-
     <div class="header">
       <a href="">Home</a>
       <a href="">History</a>
-      <a href=""></a>
-      <button class="dropBtn"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5" />
-      </svg>
-      See More</button>
+      <a href="">About</a>
+
+      <div class="dropdown">
+        <a class="dropBtn">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5"
+            />
+          </svg>
+          See More
+        </a>
+      </div>
     </div>
   </body>
 </html>
