dropdown working (no js)

--- a/src/template.html
+++ b/src/template.html
@@ -29,6 +29,12 @@
           </svg>
           See More
         </a>
+        <div class="dropdown-content">
+          <a href="#">Me</a>
+          <a href="#">Skibidi</a>
+          <a href="#">Suiii</a>
+          <a href="#">FAQ</a>
+        </div>
       </div>
     </div>
   </body>
