--- a/src/template.html
+++ b/src/template.html
@@ -6,11 +6,13 @@
     <title>Drowpdown Header + Carrousel under</title>
   </head>
   <body>
+    <!--Header Part-->
     <div class="header">
       <a href="">Home</a>
       <a href="">History</a>
       <a href="">About</a>
 
+      <!-- Menu -->
       <div class="dropdown">
         <a class="dropBtn">
           <svg
@@ -29,12 +31,45 @@
           </svg>
           See More
         </a>
+
+        <!--Dropdown-->
         <div class="dropdown-content">
           <a href="#">Me</a>
           <a href="#">Skibidi</a>
           <a href="#">Suiii</a>
           <a href="#">FAQ</a>
         </div>
+      </div>
+    </div>
+
+    <!-- Carrousel Part  -->
+    <div class="carousel">
+      <div class="carousel-item carousel-item-visible">
+        <img
+          src="https://images.unsplash.com/photo-1537211261771-e525b9e4049b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&h=450&q=80"
+          alt="Squirrel zombie"
+        />
+      </div>
+      <div class="carousel-item">
+        <img
+          src="https://images.unsplash.com/photo-1503925802536-c9451dcd87b5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&h=450&q=80"
+          alt="Zombie hands"
+        />
+      </div>
+      <div class="carousel-item">
+        <img
+          src="https://images.unsplash.com/photo-1509558567730-6c838437b06b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=600&h=450&q=80"
+          alt="Zombie pumpkin"
+        />
+      </div>
+      <div class="carousel-actions">
+        <button id="carousel-button-prev" aria-label="Previous"><</button>
+        <button id="carousel-button-next" aria-label="Next">></button>
+      </div>
+      <div class="carousel-dots">
+        <input class="dot selected-dot" type="radio" name="dot" checked />
+        <input class="dot" type="radio" name="dot" />
+        <input class="dot" type="radio" name="dot" />
       </div>
     </div>
   </body>
